fix cards height issue on mobile view

--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -159,17 +159,7 @@ main section#specials-section button{
 }
 
 
-@media screen and (max-width: 600px) {
-    main section#hero-section > div {
-        flex-direction: column;
-        align-items: center;
-    }
 
-    main section#hero-section  img{
-        max-width: 422px;
-    }
-
-}
 
 footer {
     display: grid;
@@ -218,11 +208,17 @@ footer .socials {
     display: flex;
     justify-content: center;
     gap: 1rem;
+    flex-wrap: wrap;
+}
+
+.cards-container > * {
+    flex: 1;
 }
 
 
 .card {
     max-width: 265px;
+    min-width: 190px;
     height: 375px;
     background-color: #efefef;
     border-radius: 10px;
@@ -247,3 +243,18 @@ footer .socials {
     bottom: 1rem;
 }
 
+
+
+@media screen and (max-width: 600px) {
+    main section#hero-section > div {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    main section#hero-section  img{
+        max-width: 422px;
+    }
+
+
+
+}
